Enhanced /CMPS/NEW & /MTS/NEW